# context-compression-proxy

./: README.md  REQUIREMNTS.md  docker-compose.yml  pyproject.toml  requirements.md  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile
proxy/: main.py  metrics.py  qr_retriever.py  settings.py
tests/: conftest.py
tests/benchmark/: test_chat_benchmark.py
tests/functional/: test_chat.py
tests/integration/: test_metrics.py
tests/system/: test_server.py
tests/unit/: test_main.py  test_reduce.py  test_settings.py
